Adding responsive design

--- a/components/Login/Login.module.css
+++ b/components/Login/Login.module.css
@@ -92,3 +92,25 @@
   padding-top: 13px;
   color: #00ff51ff;
 }
+
+@media (max-width: 600px) {
+  .formContainer {
+    width: 360px;
+  }
+
+  .loginForm label {
+    font-size: 17px;
+  }
+
+  .ipContainer h4 {
+    font-size: 13px;
+  }
+
+  .loginForm input {
+    width: 277px;
+  }
+
+  .titleLoginCard {
+    font-size: 23px;
+  }
+}
