--- a/pages/secret-page/secret-page.module.css
+++ b/pages/secret-page/secret-page.module.css
@@ -2,7 +2,13 @@
   text-align: center;
 }
 
-.titleNotAuth {
-  color: red;
-  text-align: center;
+.infoContainer {
+  width: 60vw;
+  text-align: justify;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+  padding-top: 120px;
+  padding-bottom: 80px;
 }
